--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,9 +1,9 @@
-NAME = bureaucrat
+NAME = form
 
 COMP = c++
 C_FLAGS = -Wall -Wextra -Werror -std=c++98
 
-SRC = main.cpp Bureaucrat.cpp
+SRC = main.cpp Bureaucrat.cpp Form.cpp
 OBJS = $(SRC:%.cpp=%.o)
 
 all: $(NAME)
